# VikingsServer/internal/app/handler/cities.go
@@ -178,6 +178,19 @@ func (h *Handler) DeleteCity(ctx *gin.Context) {
 	h.successHandler(ctx, "deleted_id", id)
 }
 
+// AddImage godoc
+// @Summary Загрузка изображения для города
+// @Security ApiKeyAuth
+// @Tags Города
+// @Description Загрузка изображения для указанного города.
+// @Accept multipart/form-data
+// @Produce json
+// @Param file formData file true "Изображение в формате файла"
+// @Param city_id formData string true "Идентификатор города"
+// @Success 201 {object} ds.AddImageRes "Успешная загрузка изображения"
+// @Failure 400 {object} errorResp "Неверный запрос"
+// @Failure 500 {object} errorResp "Внутренняя ошибка сервера"
+// @Router /api/v3/cities/upload-image [put]
 func (h *Handler) AddImage(ctx *gin.Context) {
 	file, header, err := ctx.Request.FormFile("file")
 	cityID := ctx.Request.FormValue("city_id")
